# FacePoseEstimate

./: .gitignore  CMakeLists.txt  README.md
cfg/: camera_K.yaml  cfg.yaml  landmark68.txt
include/: cfg_handle.h  detector.h  face_pos.h  solvePnP.h
src/: cfg_handle.cpp  detector.cpp  face_pos.cpp  main.cpp  solvePnP.cpp
